the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2018-01-22] RFC4880: added hash truncation for AsymmetricSignDSA()
* [2018-01-21] RFC4880: added KeyRevocationHashV3()
* [2018-01-16] RFC4880: increased buffer length for very large key sizes
* [2018-01-16] RFC4880: added OctetsCompareConstantTime()
* [2018-01-14] release 1.3.10 of LibTMCG
* [2018-01-12] RFC4880: added PacketSigPrepareCertificationSignature()
* [2018-01-10] RFC4880: added RSA encoding for PacketPubEncode()
* [2018-01-09] RFC4880: added AsymmetricSignRSA() and AsymmetricVerifyRSA()
* [2017-12-23] release 1.3.9 of LibTMCG
* [2017-12-19] RFC4880: fixes bad interpretation of subpacket length encoding
* [2017-12-17] RFC4880: fixes missing hash truncation in AsymmetricVerifyDSA()
* [2017-12-08] release 1.3.8 of LibTMCG
* [2017-12-06] RFC4880: improved error handling for unsupported public-key algos
* [2017-12-05] RFC4880: increased S2K count to 0xAC (i.e. 1835008 iterations)
* [2017-12-04] improved compiler optimization resilience of mpz_fspowm()
* [2017-12-01] release 1.3.7 of LibTMCG
* [2017-11-28] mpz_sqrtmp_r(), mpz_sqrtmp(), mpz_sqrtmp_fast(): fix memory leaks
* [2017-11-27] RFC4880: fixes some buffer underflows in PacketDecode()
* [2017-11-25] RFC4880: fixes some buffer underflows in SubpacketDecode()
* [2017-11-25] release 1.3.6 of LibTMCG
* [2017-11-25] RFC4880: added support for verification of some V3 signatures
* [2017-11-23] improved timing attack resilience of mpz_spowm()
* [2017-11-23] RFC4880: added return code 0xFE for non-fatal errors in PacketDecode()
* [2017-11-22] RFC4880: fixes a buffer overflow in SubpacketDecode()
* [2017-11-22] RFC4880: added V3 signature packets for PacketDecode()