@@ -1,4 +1,4 @@
 @set UPDATED 8 November 2017
 @set UPDATED-MONTH November 2017
-@set EDITION 1.3.10
-@set VERSION 1.3.10
+@set EDITION 1.3.11
+@set VERSION 1.3.11
